[package]
name         = "timeflake"
description  = "Rust port of Timeflake, a 128-bit, roughly-ordered, URL-safe UUID"
version      = "0.1.0"
edition      = "2024"
license      = "MIT"
license-file = "LICENSE"

[lib]
doctest = true

[[bench]]
name    = "benchmark"
harness = false

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
hex        = "0.4.3"
uuid       = { version = "1.16.0", optional = true }
base62     = "2.2.1"
rand       = "0.9.0"
utcnow     = "0.2.7"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std", "uuid"]
std     = ["rand/std", "utcnow/std"]
uuid    = ["dep:uuid"]
